--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="utf-8">
     <title>Beerland sistema de puntos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style>
+      body {background-color: powderblue;}
+      .contenedor {
+        margin: auto;
+        width: 40%;
+        padding: 10px;
+      }
+      .botones {
+        width: 100%;
+        height: 50%;
+      }
+    </style>
   </head>
   <body>
-    <input onclick="window.location.href='/sumar'" type="button" name="agregar" value="Añadir puntos">
-    <input onclick="window.location.href='/usar'" type="button" name="usar" value="Usar puntos">
-    <input onclick="window.location.href='/registrar'" type="button" name="registrar" value="Registrar usuario nuevo">
-    <input onclick="window.location.href='/verpuntos'" type="button" name="verpuntos" value="Ver base de datos">
+    <div class="contenedor">
+      <input class="botones" onclick="window.location.href='/sumar'" type="button" name="agregar" value="Añadir puntos"><br>
+      <input class="botones" onclick="window.location.href='/usar'" type="button" name="usar" value="Usar puntos"><br>
+      <input class="botones" onclick="window.location.href='/registrar'" type="button" name="registrar" value="Registrar usuario nuevo"><br>
+      <input class="botones" onclick="window.location.href='/verpuntos'" type="button" name="verpuntos" value="Ver base de datos">
+    </div>
   </body>
 </html>
