--- a/sumar.html
+++ b/sumar.html
@@ -4,11 +4,23 @@
     <meta charset="utf-8">
     <title>Beerland sistema de puntos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <style>
+      body {background-color: powderblue;}
+      .contenedor {
+        margin: auto;
+        width: 40%;
+        padding: 10px;
+      }
+      .botones {
+        width: 100%;
+        height: 50%;
+      }
+    </style>
   </head>
   <body id='body'>
-    <form class="" action="/sumar" method="post" id='formulario'>
-      <input type="number" name='DNI' id="DNI" placeholder="DNI del cliente" onkeydown="validateDNI()"><img id='alert1' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
-      <input type="number" name='monto' id="monto" placeholder="$" onkeypress="validateMonto()"><img id='alert2' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
+    <form class="contenedor" action="/sumar" method="post" id='formulario'>
+      <input type="number" name='DNI' id="DNI" placeholder="DNI del cliente" onkeydown="validateDNI()" autofocus><img id='alert1' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
+      <input type="number" min='0' name='monto' id="monto" placeholder="$" onkeypress="validateMonto()"><img id='alert2' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <input type="button" value="Cargar" onclick="validateForm()">
     </form>
   </body>
@@ -23,7 +35,7 @@
 
   function validateForm() {
     if ($('#DNI').val().length < 7 || $('#DNI').val().length > 8 || $('#monto').val() < 0) {
-      alert("Please Fill All Required Field");
+      alert("Revisar datos ingresados");
     } else {
       document.getElementById('formulario').submit();
     }
