--- a/index.html
+++ b/index.html
@@ -5,24 +5,50 @@
     <title>Beerland sistema de puntos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
-      body {background-color: powderblue;}
+      body {color: white; background-color: powderblue;}
       .contenedor {
         margin: auto;
         width: 40%;
         padding: 10px;
+      	z-index: 9998;
       }
       .botones {
         width: 100%;
         height: 50%;
       }
+      .botonesfront {
+        position: absolute;
+        width: 100%;
+        height: 5%;
+        bottom: 0px
+      }
+      .front {
+        position: fixed;
+        opacity: 100%;
+      	left: 0px;
+      	top: 0px;
+      	width: 100%;
+      	height: 100%;
+      	z-index: 9999;
+        background-color: #000000
+      }
     </style>
   </head>
   <body>
+    <div class='front'>
+      <div style="padding-top: 15%; text-align: center">DESLIZE TARJETA PARA COMENZAR</div>
+      <input class="botonesfront" onclick="window.location.href='/registrar'" type="button" name="registrar" value="Registrar usuario nuevo"><br>
+    </div>
     <div class="contenedor">
       <input class="botones" onclick="window.location.href='/sumar'" type="button" name="agregar" value="Añadir puntos"><br>
       <input class="botones" onclick="window.location.href='/usar'" type="button" name="usar" value="Usar puntos"><br>
-      <input class="botones" onclick="window.location.href='/registrar'" type="button" name="registrar" value="Registrar usuario nuevo"><br>
-      <input class="botones" onclick="window.location.href='/verpuntos'" type="button" name="verpuntos" value="Ver base de datos">
     </div>
   </body>
 </html>
+
+
+<script type="text/javascript">
+  function registrar {
+    $("#body").load("./registrar");
+  }
+</script>
