--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
       	top: 0px;
       	width: 100%;
       	height: 100%;
-      	z-index: 9999;
         background-color: #000000
       }
     </style>
   </head>
-  <body>
-    <div class='front'>
+  <body id='body'>
+    <div class='front' id='front'>
       <div style="padding-top: 15%; text-align: center">DESLIZE TARJETA PARA COMENZAR</div>
-      <input class="botonesfront" onclick="window.location.href='/registrar'" type="button" name="registrar" value="Registrar usuario nuevo"><br>
-    </div>
-    <div class="contenedor">
-      <input class="botones" onclick="window.location.href='/sumar'" type="button" name="agregar" value="Añadir puntos"><br>
-      <input class="botones" onclick="window.location.href='/usar'" type="button" name="usar" value="Usar puntos"><br>
+      <input class="botonesfront" type="button" id="registrar" value="Registrar usuario nuevo"><br>
     </div>
   </body>
 </html>
 
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 
 <script type="text/javascript">
-  function registrar {
+  $('#registrar').click( function() {
     $("#body").load("./registrar");
-  }
+  });
+
 </script>
