Eliminar cliente agregado
y detallitos

--- a/doc_noexist.html
+++ b/doc_noexist.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div>
-      ERROR: La tarjeta ya se encuentra registrada en la base de datos.
+      ERROR: Documento no encontrado.
     </div>
   </body>
 </html>
