--- a/exito.html
+++ b/exito.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Cargado con exito!</title>
+    <style>
+      body {
+        left: 0px;
+      	top: 0px;
+      	width: 100%;
+      	height: 100%;
+        background-color: #000000
+      }
+      p {
+        color: white;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <div class="">
-      <p>Carga exitosa!</p>
+    <div>
+      <p>Operación exitosa</p>
       <p>Redireccionando a la página principal...</p>
     </div>
   </body>
 </html>
+
+<script type="text/javascript">
+  setTimeout(function() {
+    window.location.href = "/";
+  }, 3000)
+</script>
