--- a/doc_exist.html
+++ b/doc_exist.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      body {
+        left: 0px;
+      	top: 0px;
+      	width: 100%;
+      	height: 100%;
+        background-color: #000000
+      }
+      div {
+        color: white;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-
+    <div>
+      ERROR: El documento ya se encuentra registrado en la base de datos.
+    </div>
   </body>
 </html>
+
+<script type="text/javascript">
+  setTimeout(function() {
+    window.location.href = "/";
+  }, 3000)
+</script>
