--- a/registrar.html
+++ b/registrar.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      body {
+        left: 0px;
+      	top: 0px;
+      	width: 100%;
+      	height: 100%;
+        background-color: #000000
+        color: white
+      }
+      select, input {
+        margin: 2vh;
+      }
+    </style>
   </head>
   <body>
     <form class="contenedor" action="/registrar" method="post" id='formulario'>
@@ -14,7 +27,7 @@
         <option value="o">Otro</option>
       </select> <img id='alert3' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <input type="text" name="localidad" id="localidad" placeholder="Localidad"> <img id='alert4' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
-      <input type="text" name="tarjeta" id="tarjeta" placeholder="Nº Tarjeta"> <img id='alert5' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
+      <input type="text" name="tarjeta" id="tarjeta" placeholder="Pase tarjeta para completar"> <img id='alert5' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
       <input type="button" id='cargar' value="Cargar">
     </form>
   </body>
@@ -23,6 +36,8 @@
 <script
   src="/jquery-3.4.1.min.js"></script>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 
 <script type="text/javascript">
   document.getElementById('cargar').addEventListener("click", function() {
@@ -40,4 +55,11 @@
       return(true);
     }
   }
+
+  jQuery(function($){
+    var socket = io.connect('http://localhost:4000');
+    socket.on('rfid', function(rfidtag) {
+      $('#tarjeta').val() = rfidtag;
+    })
+  });
 </script>
