Base de datos y pequeño update

--- a/eliminar.html
+++ b/eliminar.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <form class="contenedor" action="/eliminar" method="post" id='formulario'>
-      <input type="number" name='documento' id="documento" placeholder="Documento del cliente" autofocus> <img id='alert1' src="alert" alt="Alert" style="width:16px;height:16px;"><br>
+      <input type="number" name='documento' id="documento" placeholder="Documento del cliente" autofocus>
       <input type="button" id='eliminar' value="Eliminar">
     </form>
   </body>
@@ -28,8 +28,7 @@
 <script
   src="/jquery-3.4.1.min.js"></script>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<script src="/socket.io.js"></script>
 
 <script type="text/javascript">
   document.getElementById('eliminar').addEventListener("click", function() {
