--- a/registrar.html
+++ b/registrar.html
@@ -36,8 +36,7 @@
 <script
   src="/jquery-3.4.1.min.js"></script>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+<script src="http://localhost:4000/socket.io/socket.io.js"></script>
 
 <script type="text/javascript">
   document.getElementById('cargar').addEventListener("click", function() {
