--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <input class="botones3" type="button" id="eliminarthis" value="Eliminar este cliente">
       </div>
       <div class="contenedor" id="contenedor">
-        <table style="width:100%; margin: 0px">
+        <table style="width:100%; margin: 0px; opacity: 0%">
           <tr>
             <th>Documento: </th>
             <td id="documento"></td>
@@ -112,8 +112,8 @@
           <tr>
             <th>Total</th>
             <th> </th>
-            <th> </th>
             <th class='total' id='totalmonto'></th>
+            <th> </th>
           </tr>
         </table>
         <input type="button" id="enviarpuntos" value="Cargar">
@@ -121,14 +121,14 @@
 
       <div class="items">
         <select name="selectitems" id='items'>
-          <option value="Birra1|70">Birra1</option>
-          <option value="Birra2|85">Birra2</option>
-          <option value="Birra3|75">Birra3</option>
-          <option value="Comida1|250">Comida1</option>
-          <option value="Comida2|185">Comida2</option>
-          <option value="Comida3|300">Comida3</option>
-          <option value="Bebida1|60">Bebida1</option>
-          <option value="Bebida2|80">Bebida2</option>
+          <option value="Birra1|70|1">Birra1</option>
+          <option value="Birra2|85|2">Birra2</option>
+          <option value="Birra3|75|3">Birra3</option>
+          <option value="Comida1|250|7">Comida1</option>
+          <option value="Comida2|185|7">Comida2</option>
+          <option value="Comida3|300|7">Comida3</option>
+          <option value="Bebida1|60|6">Bebida1</option>
+          <option value="Bebida2|80|6">Bebida2</option>
         </select>
         <input type="button" id="agregaritem" value="Añadir item">
       </div>
@@ -171,16 +171,40 @@
   //AÑADIR ITEM CON SU NOMBRE, COSTO Y BOTON DE QUITAR
   $('#agregaritem').click( function() {
     var itemagregado = $('#items').val().split("|");
-    var markup = "<tr><td>" + itemagregado[0] + "</td><td><input type='number' style='text-align: right; background-color: #303030; color: white' value='1' min='1'></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
-    $("#listaitems tr:first").after(markup);
+    console.log(itemagregado[2]);
+    var markup = "<tr class='" + itemagregado[2] + "'><td>" + itemagregado[0] + "</td><td><input class='sumarmismoitem' type='button' style='background-color: #109010; color: white' value='+'><input class='quitarmismoitem' type='button' style='background-color: #901010; color: white' value='-'><p class='cantitem' style='color:white'>1</p></td><td class='monto'>" + itemagregado[1] + "</td><td> <input class='quitardelista' type='button' value='Quitar'></td></tr>";
+    $("#listaitems tr:last").prev('tr').after(markup);
     var montototal = Number(itemagregado[1]) + Number($('#totalmonto').html());
     $('#totalmonto').html(montototal);
   });
   //QUITAR ITEM
   $('#listaitems').on('click', '.quitardelista', function(){
-    var montototal = Number($('#totalmonto').html()) - Number($(this).closest('.monto').html());
+    var montototal = Number($('#totalmonto').html()) - Number($(this).parent().parent().find('.monto').html());
     $(this).closest('tr').remove();
     $('#totalmonto').html(montototal.toString());
+  });
+  //CAMBIAR CANTIDAD DE UN ITEM
+  //Agregar
+  $('#listaitems').on('click', '.sumarmismoitem', function(){
+    var montoitem = Number($(this).parent().parent().find('.monto').html()) + Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('p').html());
+    var cantitems = Number($(this).parent().parent().find('p').html()) + 1
+    console.log(montoitem);
+    $(this).parent().parent().find('.monto').html(montoitem);
+    $(this).parent().parent().find('p').html(cantitems);
+    var montototal = Number($('#totalmonto').html()) + montoitem / Number($(this).parent().parent().find('p').html());
+    $('#totalmonto').html(montototal.toString());
+  });
+  //Quitar
+  $('#listaitems').on('click', '.quitarmismoitem', function(){
+    if (Number($(this).parent().parent().find('p').html()) > 1) {
+      var montoitem = Number($(this).parent().parent().find('.monto').html()) - Number($(this).parent().parent().find('.monto').html()) / Number($(this).parent().parent().find('p').html());
+      var cantitems = Number($(this).parent().parent().find('p').html()) - 1
+      console.log(montoitem);
+      $(this).parent().parent().find('.monto').html(montoitem);
+      $(this).parent().parent().find('p').html(cantitems);
+      var montototal = Number($('#totalmonto').html()) - montoitem / Number($(this).parent().parent().find('p').html());
+      $('#totalmonto').html(montototal.toString());
+    }
   });
   //CREO FORM PARA MANDAR CON LOS DATOS
   $('#enviarpuntos').click(function() {
@@ -196,6 +220,41 @@
     puntosForm.append(jQuery('<input>', {
         'name': 'monto',
         'value': $('#totalmonto').html(),
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'comida',
+        'value': $('.7').length * Number($('#listaitems').find('.7').find('p').html()),
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'rubia',
+        'value': $('.1').length,
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'negra',
+        'value': $('.2').length,
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'roja',
+        'value': $('.3').length,
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'temporada',
+        'value': $('.4').length,
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'otroalcohol',
+        'value': $('.5').length,
+        'type': 'hidden'
+    }));
+    puntosForm.append(jQuery('<input>', {
+        'name': 'salcohol',
+        'value': $('.6').length,
         'type': 'hidden'
     }))
     $(document.body).append(puntosForm);
